# apertium-tur-aze

./: .gitattributes  .gitignore  ACKNOWLEDGEMENTS  AUTHORS  Makefile  Makefile.am  README  apertium-tr-az.tr-az.dix  apertium-tr-az.tr-az.rlx  apertium-tr-az.tr-az.t1x  apertium-tur-aze.tur-aze.dix  apertium-tur-aze.tur-aze.rlx  article  configure.ac  modes.xml  pending-tests.sh  regression-tests.sh  tofix  tr-az.sh  update-azemorph.py  update-azmorph.py  update-lexica.py  update-trmorph.py  update-turmorph.py  wiki-tests.sh
dev/: bilingual-summary.txt  corpus-inconsistency.sh  disambiguation_rules.txt  extract-translations.sh  generation-summary.tr-az.txt  generation-test.tr-az.sh  missing-bidix-freq.sh  tofix  trans0200  trans0400  trans1000  verbs0400  verbs0700  verbs1000  verbs1300  verbs1800  verbs2200  verbs2492
dev/bidix/: bidix-with-context.sh  context_nouns.txt  pending_adjectives.txt  pending_adverbs.txt  pending_conjunctions.txt  pending_determiners.txt  pending_nouns.txt  pending_numerals.txt  pending_postpositions.txt  pending_pronouns.txt  pending_proper_nouns.txt  pending_verbs.txt
dev/comparative/: undhr.tr-az.apertium.txt  undhr.tr-az.google.txt  undhr.tr.txt
dev/evaluation/: README  setimes.bulgar.tr.txt  setimes.kosova.plate.az  setimes.kosova.tr.txt  setimes.kosova_plate.az.txt  setimes.kosova_plate.tr.txt  wikipedia.kadinlar_askerler.az.txt  wikipedia.kadinlar_askerler.tr.txt
dev/midterm/: article.az.txt  article.tr-az.2011-07-12.txt
midterm/: article.tr.txt
morph-az/: Makefile.am  README  azmorph.fst  deriv.fst  ninfl.fst  num.fst  particles.fst  symbols.fst  vinfl.fst
morph-az/lexicon/: adjectives  adverbs  cnjadv  cnjcoo  cnjsub  det  interjections  misc  nouns  postpositions  postpositions_infl  pronouns  proper_nouns  verbs
morph-az/phon/: 010-exception_deye.fst  017-exception_i.fst  020-compn.fst  040-exception_ben.fst  050-exception_su.fst  060-xception_del_bS.fst  070-exception_del_buff.fst  095-cons-alt.fst  100-fs_devoicing.fst  120-passive_ln.fst  140-v_harmony.fst  Makefile  phon.fst
morph-aze/: Makefile.am  README  azmorph.fst  particles.fst  symbols.fst  vinfl.fst
morph-aze/lexicon/: adjectives  adverbs  cnjadv  cnjcoo  det  interjections  pronouns  proper_nouns
morph-aze/phon/: 015-exception_obs.fst  080-vowel_epenth.fst  090-duplication.fst  110-v_assimilation.fst  130-exception_yor.fst
morph-tr/: Makefile.am
morph-tr/lexicon/: adjectives  adverbs  cnjadv  cnjcoo  cnjsub  det  interjections  nouns  pn_acr  pn_ant  pn_cog  postpositions  pronouns  proper_nouns  toponyms  verbs
morph-tr/phon/: Makefile
morph-tur/: Makefile.am  update-static-files.sh  version.fst
morph-tur/lexicon/: nouns  pn_acr  pn_cog  pn_org  postpositions  verbs
morph-tur/phon/: Makefile
tests/: 0000.dis.txt  0000.txt  0001.dis.txt  0001.txt  0002.dis.txt  0002.txt  0003.txt  0004.dis.txt  0004.txt  0005.dis.txt  0005.txt  0006.dis.txt  0006.txt  0007.txt  0008.txt  0009.txt  0010.txt  0011.txt  0012.txt  0013.txt  0014.txt  0015.txt  0016.txt  0017.txt  0018.dis.txt  0018.txt  0019.txt  0020.txt  0021.txt  0022.txt  run-tests.sh  taggedarticle
